[gd_scene load_steps=23 format=3 uid="uid://b4als206inycd"]

[ext_resource type="Script" path="res://rsc/UI/UI.gd" id="1_32ly1"]
[ext_resource type="PackedScene" uid="uid://cej375spoxas4" path="res://rsc/UI/weaponpanel.tscn" id="2_w73e5"]
[ext_resource type="Texture2D" uid="uid://db73su57ayrij" path="res://assets/ui/icons/tag_1.png" id="3_cu2s6"]
[ext_resource type="Texture2D" uid="uid://0vdl5b5p7rsy" path="res://assets/ui/icons/tag_3.png" id="3_rlh7u"]
[ext_resource type="StyleBox" uid="uid://dx3xi457o1lm" path="res://rsc/UI/weaponbox.tres" id="3_tmden"]
[ext_resource type="Texture2D" uid="uid://drfvxuiayvccc" path="res://assets/ui/square_shadow.png" id="4_8suf4"]
[ext_resource type="Texture2D" uid="uid://ce8472w2fdwfs" path="res://assets/ui/icons/tag_2.png" id="4_lsnix"]
[ext_resource type="Script" path="res://rsc/UI/StatusBar.gd" id="4_x1hjr"]
[ext_resource type="Texture2D" uid="uid://dyiobcs0nh60u" path="res://assets/ui/squareRed.png" id="5_wd58u"]
[ext_resource type="Texture2D" uid="uid://bg7jgho0ega5l" path="res://assets/ui/squareYellow.png" id="6_l2ph6"]
[ext_resource type="Texture2D" uid="uid://xqrdsfeekmwd" path="res://assets/ui/suit_hearts.png" id="6_lox2o"]
[ext_resource type="Texture2D" uid="uid://dby6v2chpdue8" path="res://assets/ui/fastForward.png" id="7_q8xjb"]
[ext_resource type="StyleBox" uid="uid://d4h8qf0yco7px" path="res://rsc/UI/panelthing.tres" id="8_ffsge"]
[ext_resource type="Texture2D" uid="uid://smjle6kq570h" path="res://assets/ui/squareWhite.png" id="8_tar7x"]
[ext_resource type="StyleBox" uid="uid://bgkdjgyff20e1" path="res://rsc/UI/smth.tres" id="10_0v04b"]
[ext_resource type="PackedScene" uid="uid://7yi7tcbx7byl" path="res://rsc/thebigwat.tscn" id="10_qcqd4"]
[ext_resource type="Texture2D" uid="uid://ck13wvfkik6gh" path="res://assets/ui/arrowUp.png" id="11_jjdqo"]
[ext_resource type="PackedScene" uid="uid://ivs5ra6fwtms" path="res://rsc/UI/upgrade_button.tscn" id="16_51eim"]
[ext_resource type="Script" path="res://rsc/UI/UpgradeMenu.gd" id="16_woofw"]
[ext_resource type="Script" path="res://rsc/UI/GameOver.gd" id="18_bupg7"]
[ext_resource type="Script" path="res://rsc/UI/PauseMenu.gd" id="18_fkgry"]

[sub_resource type="GDScript" id="GDScript_u1eh3"]
script/source = "extends Control

@onready var wep0 : WeaponPanel = get_node(\"%Weapon0\")
@onready var wep1 : WeaponPanel = get_node(\"%Weapon1\")
@onready var wep2 : WeaponPanel = get_node(\"%Weapon2\")
@onready var ammo : TextureProgressBar = get_node(\"%Ammo\")
@onready var reload : TextureProgressBar = get_node(\"%Reload\")


var weaponpanels : Array[WeaponPanel] = [wep0,wep1,wep2]

func _ready() -> void:
	weaponpanels = [wep0,wep1,wep2]


func update():
	var weapons : Array[Weapon] = Globals.player.weapon_manager.weapons
	var slot : int = Globals.player.weapon_manager.equipped_slot
	
	for n in range(0,weapons.size()):
		weaponpanels[n].visible = weapons[n] != null
		if n == slot:
			weaponpanels[n].equip_change(true)
		else:
			weaponpanels[n].equip_change(false)
		weaponpanels[n].update(weapons[n])
	
	ammo.max_value = weapons[slot].magazine_size
	ammo.value = weapons[slot].ammo
	reload.max_value = weapons[slot].reload_time
	if ammo.value < ammo.max_value:
		reload.value = weapons[slot].reload_time - weapons[slot].reload_timer
	else:
		reload.value = 0
	
	
"

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32ly1")

[node name="WeaponPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -170.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
script = SubResource("GDScript_u1eh3")

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Control" type="Control" parent="WeaponPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Weapon2" parent="WeaponPanel/VBoxContainer/Control" instance=ExtResource("2_w73e5")]
unique_name_in_owner = true
layout_mode = 0

[node name="TextureRect3" type="TextureRect" parent="WeaponPanel/VBoxContainer/Control/Weapon2"]
layout_mode = 0
offset_left = -33.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 22.0
texture = ExtResource("3_rlh7u")
expand_mode = 1

[node name="Control2" type="Control" parent="WeaponPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Weapon1" parent="WeaponPanel/VBoxContainer/Control2" instance=ExtResource("2_w73e5")]
unique_name_in_owner = true
layout_mode = 0

[node name="TextureRect2" type="TextureRect" parent="WeaponPanel/VBoxContainer/Control2/Weapon1"]
layout_mode = 0
offset_left = -33.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 22.0
texture = ExtResource("4_lsnix")
expand_mode = 1

[node name="Control3" type="Control" parent="WeaponPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Weapon0" parent="WeaponPanel/VBoxContainer/Control3" instance=ExtResource("2_w73e5")]
unique_name_in_owner = true
layout_mode = 0

[node name="TextureRect" type="TextureRect" parent="WeaponPanel/VBoxContainer/Control3/Weapon0"]
layout_mode = 0
offset_left = -33.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 22.0
texture = ExtResource("3_cu2s6")
expand_mode = 1

[node name="AmmoBar" type="Panel" parent="WeaponPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 0
offset_left = 155.0
offset_right = 195.0
offset_bottom = 150.0
theme_override_styles/panel = ExtResource("3_tmden")

[node name="HBoxContainer" type="HBoxContainer" parent="WeaponPanel/AmmoBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 34.0
offset_bottom = 125.0
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponPanel/AmmoBar/HBoxContainer"]
custom_minimum_size = Vector2(20, 22)
layout_mode = 2

[node name="Ammo" type="TextureProgressBar" parent="WeaponPanel/AmmoBar/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
value = 80.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("6_l2ph6")

[node name="VBoxContainer2" type="VBoxContainer" parent="WeaponPanel/AmmoBar/HBoxContainer"]
custom_minimum_size = Vector2(3, 20)
layout_mode = 2

[node name="Reload" type="TextureProgressBar" parent="WeaponPanel/AmmoBar/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
step = 0.05
value = 50.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_progress = ExtResource("8_tar7x")

[node name="StatusPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 91.0
theme_override_styles/panel = ExtResource("8_ffsge")
script = ExtResource("4_x1hjr")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Level" type="RichTextLabel" parent="StatusPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 54.0
offset_bottom = 79.0
theme_override_font_sizes/normal_font_size = 14
text = "LV. 55"
scroll_active = false
autowrap_mode = 0
tab_size = 1

[node name="ExpBar" type="TextureProgressBar" parent="StatusPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 54.0
offset_right = 230.0
offset_bottom = 74.0
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("6_l2ph6")

[node name="HealthBar" type="TextureProgressBar" parent="StatusPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 25.0
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("5_wd58u")

[node name="TextureRect" type="TextureRect" parent="StatusPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 25.0
texture = ExtResource("6_lox2o")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="StatusPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 54.0
offset_right = 70.0
offset_bottom = 74.0
texture = ExtResource("11_jjdqo")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="StatusPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 28.0
offset_right = 70.0
offset_bottom = 48.0
texture = ExtResource("7_q8xjb")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="StatusPanel/TextureRect2"]
layout_mode = 0
offset_left = 22.0
offset_right = 62.0
offset_bottom = 20.0

[node name="stam1" type="TextureProgressBar" parent="StatusPanel/TextureRect2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
step = 0.05
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("8_tar7x")

[node name="stam2" type="TextureProgressBar" parent="StatusPanel/TextureRect2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
step = 0.05
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("8_tar7x")

[node name="stam3" type="TextureProgressBar" parent="StatusPanel/TextureRect2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
step = 0.05
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("4_8suf4")
texture_progress = ExtResource("8_tar7x")

[node name="ColorRect" type="ColorRect" parent="StatusPanel"]
clip_children = 2
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 47.0
offset_bottom = 48.0

[node name="Panel" type="Panel" parent="StatusPanel/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("10_0v04b")

[node name="Aster" parent="StatusPanel/ColorRect/Panel" instance=ExtResource("10_qcqd4")]
show_behind_parent = true
position = Vector2(20, 37)
scale = Vector2(2, 2)

[node name="UpgradeMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_woofw")

[node name="Delay" type="Timer" parent="UpgradeMenu"]
wait_time = 0.5
one_shot = true

[node name="Panel" type="Panel" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("8_ffsge")

[node name="RichTextLabel" type="RichTextLabel" parent="UpgradeMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_top = 17.0
offset_right = 89.5
offset_bottom = 57.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Previous Magical Girls lend you their strength:[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 51.0
offset_right = 300.0
offset_bottom = 383.0
grow_horizontal = 2

[node name="UpgradeButton0" parent="UpgradeMenu/Panel/VBoxContainer" instance=ExtResource("16_51eim")]
layout_mode = 2

[node name="UpgradeButton1" parent="UpgradeMenu/Panel/VBoxContainer" instance=ExtResource("16_51eim")]
layout_mode = 2

[node name="UpgradeButton2" parent="UpgradeMenu/Panel/VBoxContainer" instance=ExtResource("16_51eim")]
layout_mode = 2

[node name="UpgradeButton3" parent="UpgradeMenu/Panel/VBoxContainer" instance=ExtResource("16_51eim")]
layout_mode = 2

[node name="GameOver" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_bupg7")

[node name="Delay" type="Timer" parent="GameOver"]
wait_time = 0.5
one_shot = true

[node name="Panel" type="Panel" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = 181.0
offset_right = -94.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("8_ffsge")

[node name="Return" type="Button" parent="GameOver/Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Return"

[node name="RichTextLabel" type="RichTextLabel" parent="GameOver/Panel"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_top = 17.0
offset_right = 89.5
offset_bottom = 57.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]The fight is far from over[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Time" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("8_ffsge")

[node name="Timer" type="RichTextLabel" parent="Time"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "aaaaaaaa"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Time"]
layout_mode = 0
offset_right = 84.0
offset_bottom = 40.0

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_fkgry")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.403922)

[node name="Panel" type="Panel" parent="PauseMenu"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("8_ffsge")

[node name="Return" type="Button" parent="PauseMenu/Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -62.0
offset_right = 100.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "Return to Title Screen"

[node name="Unpause" type="Button" parent="PauseMenu/Panel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 47.0
offset_right = 100.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
text = "Unpause"

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -211.5
offset_right = 211.5
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Game Paused[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
